# openapi.yaml
@@ -38,6 +38,15 @@ components:
           example: 'dGhpcyBpcyBhIHJlZnJlc2g...'
         user:
           $ref: '#/components/schemas/User'
+    GoneError:
+      type: object
+      properties:
+        error:
+          type: string
+          example: 'Grace period expired'
+        code:
+          type: string
+          example: 'ACCOUNT_PERMANENTLY_DELETED'
 
     RefreshRequest:
       type: object
@@ -171,6 +180,87 @@ paths:
                 $ref: '#/components/schemas/AuthResponse'
         '401':
           description: Unauthorized
+
+  /auth/restore/confirm:
+    post:
+      tags: Account Recovery
+      summary: تأكيد استعادة الحساب
+      description: |
+        يكتب كلمة المرور الجديدة
+         مستقبلا نقدر نضيف ميزه يستلم  كود التحقق 
+        ثم يستعيد الحساب ويعيد تسجيل الدخول تلقائياً.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [email, newPassword]
+              properties:
+                email:
+                  type: string
+                  format: email
+
+                newPassword:
+                  type: string
+                  minLength: 8
+                  format: password
+      responses:
+        '200':
+          description: تم الاستعادة وإعادة تسجيل الدخول
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/AuthResponse'
+                  - type: object
+                    properties:
+                      message:
+                        type: string
+                        example: 'Account restored successfully'
+        '400':
+          description: كود غير صحيح أو منتهي
+        '404':
+          description: الحساب غير موجود
+        '410':
+          description: انتهت فترة السماح
+
+  /auth/restore/request:
+    post:
+      tags:
+        - Account Recovery
+      summary: طلب استعادة الحساب
+      description: |
+        حاليا يدخل الايميل للاستعادة نشاط الحساب مستقبلا يمكن اضافه ميزه
+        يرسل كود تحقق إلى بريد المستخدم المسجل.
+        يعمل فقط إذا كان الحساب في فترة السماح (30 يوم).
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [email]
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: 'user@example.com'
+      responses:
+        '200':
+          description: request send to active account
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        '404':
+          description: لا يوجد حساب محذوف بهذا الإيميل
+        '410':
+          description: انتهت فترة السماح (Grace Period Expired)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GoneError'
 
   /auth/refresh:
     post:
